--- a/Leyenda_image_classification.ipynb
+++ b/Leyenda_image_classification.ipynb
@@ -45,7 +45,7 @@
     "> 8. [Improving models](#8)\n",
     "> 9. [Improving training](#9)\n",
     "> 10. [Transfer Learning](#10)\n",
-    "> 10. [Results](#11)"
+    "> 11. [Results](#11)"
    ]
   },
   {
@@ -65,7 +65,7 @@
     "\n",
     "It gathers our design process steps and idea on how to create the most accurate and efficient Neural Network for this task.\n",
     "\n",
-    "Please note that I you run this notebook code on your own, you may encounter different accuracy results than the ones we obtained. <br>\n",
+    "Please note that I you run this notebook code on your own, **you may encounter different accuracy results** than the ones we obtained. <br>\n",
     "This is due on the way the `model.evaluate()` function works in TensorFlow."
    ]
   },
@@ -1373,7 +1373,22 @@
    "id": "edb8acfd",
    "metadata": {},
    "source": [
-    "Talk a bit on how to find best hyper parameters using RandomSearch"
+    "Random Search is a technique used for tuning hyperparameters in order to find those who suit best our model. <br>\n",
+    "In fact, it tests a certain number of combinations that are selected randomly. <br>\n",
+    "However, this technique require much ressources. \n",
+    "\n",
+    "The following code can be used in order to implement this technique:\n",
+    "\n",
+    "```python\n",
+    "from  keras_tuner import RandomSearch\n",
+    "random_s= RandomSearch(cnn_3,\n",
+    "                       objectives= 'val_accuracy',\n",
+    "                       max_trials=15)\n",
+    "random_s.seach(train_data,\n",
+    "               epochs=5,\n",
+    "               validation_data= val_data,\n",
+    "               callbacks=[tf.keras.callbacks.EarlyStopping(patiente=1)])\n",
+    "```"
    ]
   },
   {
@@ -1398,9 +1413,9 @@
    "id": "069c96f3",
    "metadata": {},
    "source": [
-    "The idea behind Transfer Learning is to take an already existing that has been training on a similar task than ours, and then re-train it to fit our needs.\n",
+    "The idea behind Transfer Learning is to take an already existing model that has been trained on a similar task than ours, and then re-train it to fit our needs.\n",
     "\n",
-    "This methods is far more efficient compare to the trial-and-error approch because a lot of model for various purposes has already been designed, trained and documented way better than what we could think of."
+    "This methods is far more efficient compare to the trial-and-error approch because a lot of models has already been designed, trained and documented way better than what we could think of."
    ]
   },
   {
