--- a/Leyenda_image_classification.ipynb
+++ b/Leyenda_image_classification.ipynb
@@ -122,6 +122,8 @@
    },
    "outputs": [],
    "source": [
+    "%load_ext watermark\n",
+    "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
@@ -147,7 +149,6 @@
     "import tensorflow_hub as tf_hub\n",
     "\n",
     "tf.random.set_seed(1234)\n",
-    "print(tf.__version__)\n",
     "\n",
     "# Image manipulation\n",
     "import imghdr\n",
@@ -166,7 +167,9 @@
     "%matplotlib inline\n",
     "\n",
     "# Utils\n",
-    "import leyenda_utils as lu"
+    "import leyenda_utils as lu\n",
+    "\n",
+    "%watermark -p watermark,wget,numpy,sklearn,tensorflow,tensorflow_hub,PIL,matplotlib,seaborn,visualkeras"
    ]
   },
   {
