--- a/Leyenda_image_classification.ipynb
+++ b/Leyenda_image_classification.ipynb
@@ -504,7 +504,7 @@
    "id": "33266384",
    "metadata": {},
    "source": [
-    "In order to be able to compare the model troughout the notebook, we chose to training them using the configuration."
+    "In order to be able to compare the model troughout the notebook, we chose to training them using the same configuration."
    ]
   },
   {
