--- a/Leyenda_autoencoder.ipynb
+++ b/Leyenda_autoencoder.ipynb
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The dataset is composed of 150 .jpg images, comming in different dimensions.\n",
+    "The dataset is composed of 150 .jpg images, coming in different dimensions.\n",
     "\n",
     "Because of the low number of images, in order to obtain significants results, we will augment this dataset to increase the number of trainable items."
    ]
@@ -537,7 +537,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we have a lokk at the reconstructed image, we can see nevertheless that the model produce 'ghost' images with the global shape and colors of the original images."
+    "If we have a loOk at the reconstructed image, we can see nevertheless that the model produce 'ghost' images with the global shape and colors of the original images."
    ]
   },
   {
