--- a/Leyenda_autoencoder.ipynb
+++ b/Leyenda_autoencoder.ipynb
@@ -108,6 +108,7 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "# File manipulation\n",
+    "import glob\n",
     "import os\n",
     "import pathlib\n",
     "import shutil\n",
@@ -131,7 +132,7 @@
     "import imgaug.augmenters as iaa\n",
     "import imgaug as ia\n",
     "import imghdr\n",
-    "from PIL import ImageFile\n",
+    "from PIL import Image, ImageFile\n",
     "\n",
     "# Options for PIL\n",
     "ImageFile.LOAD_TRUNCATED_IMAGES = True\n",
@@ -222,16 +223,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "03e9e481-0bc7-4d94-9263-0a874609be6d",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-10-04T10:10:39.785701Z",
+     "iopub.status.busy": "2022-10-04T10:10:39.785114Z",
+     "iopub.status.idle": "2022-10-04T10:10:39.793214Z",
+     "shell.execute_reply": "2022-10-04T10:10:39.792202Z",
+     "shell.execute_reply.started": "2022-10-04T10:10:39.785598Z"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "import glob\n",
-    "from skimage import io\n",
+    "if len(invalid_images) > 0:\n",
+    "    if not os.path.isdir('data/invalid'):\n",
+    "        os.mkdir('data/invalid')\n",
     "\n",
-    "images = []\n",
-    "\n",
-    "for path in glob.glob(DATA_PATH + '/*'):\n",
-    "    images.append(io.imread(path))"
+    "    for image in invalid_images:\n",
+    "        shutil.move(image, 'data/invalid')"
    ]
   },
   {
@@ -247,9 +257,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import imgaug.augmenters as iaa\n",
-    "import imgaug as ia\n",
+    "images = []\n",
     "\n",
+    "for path in glob.glob(DATA_PATH + '/*'):\n",
+    "    images.append(np.asarray(Image.open(path)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "IMG_H, IMG_W = 180, 180\n",
     "\n",
     "preprocess = iaa.Sequential([\n",
@@ -747,7 +766,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 23:26:10) \n[GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
