--- a/Leyenda_image_classification.ipynb
+++ b/Leyenda_image_classification.ipynb
@@ -437,58 +437,13 @@
    },
    "outputs": [],
    "source": [
-    "def plot_random_images():\n",
-    "    \"\"\"\n",
-    "    Plots 20 Random Images from the dataset\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    images, labels = train_data.next()\n",
-    "    labels = labels.astype('int32')\n",
-    "    i = 1\n",
-    "\n",
-    "    plt.figure(figsize = (10, 10))\n",
-    "   \n",
-    "    for image, label in zip(images, labels):\n",
-    "        plt.subplot(4, 5, i)\n",
-    "        plt.xticks([])\n",
-    "        plt.yticks([])\n",
-    "        plt.grid(False)\n",
-    "        plt.title('\\n\\n'+list(train_data.class_indices.keys())[label])\n",
-    "        plt.imshow(image)\n",
-    "\n",
-    "        i += 1\n",
-    "        if i == 21:\n",
-    "            break\n",
-    "    \n",
-    "    plt.tight_layout()       \n",
-    "    plt.suptitle(\"Randomly picked images from training set\", fontsize=16, fontweight=\"bold\")\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89dfd15a",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-10-04T09:11:53.176819Z",
-     "iopub.status.busy": "2022-10-04T09:11:53.176516Z",
-     "iopub.status.idle": "2022-10-04T09:11:54.477222Z",
-     "shell.execute_reply": "2022-10-04T09:11:54.476677Z",
-     "shell.execute_reply.started": "2022-10-04T09:11:53.176782Z"
-    },
-    "papermill": {
-     "duration": 3.316769,
-     "end_time": "2022-09-05T05:05:55.916049",
-     "exception": false,
-     "start_time": "2022-09-05T05:05:52.599280",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "plot_random_images()"
+    "lu.compare_image_sets([train_data.next()[0], val_data.next()[0], test_data.next()[0]], 10,\n",
+    "                      labels=['train', 'val', 'test'],\n",
+    "                      size=(15, 4))\n",
+    "                      \n",
+    "train_data.reset()\n",
+    "val_data.reset()\n",
+    "test_data.reset()"
    ]
   },
   {
@@ -565,13 +520,13 @@
     "dnn_1 = Sequential([\n",
     "    Flatten(input_shape=(IMG_H, IMG_W, 3)),\n",
     "    Dense(units=len(CLASS_NAMES), activation='softmax')\n",
-    "], name='dnn_1')\n",
+    "], name='class_dnn_1')\n",
     "\n",
     "dnn_1.compile(loss=LOSS,\n",
     "              optimizer=OPTIMIZER,\n",
     "              metrics=METRICS)\n",
     "\n",
-    "visualkeras.layered_view(dnn_1)"
+    "visualkeras.layered_view(dnn_1, legend=True)"
    ]
   },
   {
@@ -586,9 +541,7 @@
     "else:\n",
     "    dnn_1.fit(train_data,\n",
     "              epochs= NUM_EPOCH,\n",
-    "              steps_per_epoch = len(train_data),\n",
-    "              validation_data = val_data,\n",
-    "              validation_steps = len(val_data))\n",
+    "              validation_data = val_data)\n",
     "            \n",
     "    lu.save_model_training(dnn_1)"
    ]
@@ -663,7 +616,7 @@
     "    Dense(units=256, activation='relu'),\n",
     "    Dense(units=128, activation='relu'),\n",
     "    Dense(units=len(CLASS_NAMES), activation='softmax')\n",
-    "], name='dnn_2')\n",
+    "], name='class_dnn_2')\n",
     "\n",
     "dnn_2.compile(loss=LOSS,\n",
     "              optimizer=OPTIMIZER,\n",
@@ -998,7 +951,7 @@
     "    MaxPool2D(pool_size = 2),\n",
     "    Flatten(),\n",
     "    Dense(len(CLASS_NAMES), activation = 'softmax')  \n",
-    "], name='cnn_2')\n",
+    "], name='class_cnn_2')\n",
     "\n",
     "cnn_2.compile(loss = LOSS,\n",
     "              optimizer = OPTIMIZER,\n",
@@ -1163,7 +1116,7 @@
     "    Dropout(0.5),\n",
     "    Dense(units=512, activation='relu'),\n",
     "    Dense(units=len(CLASS_NAMES), activation='softmax')\n",
-    "], name='cnn_3')\n",
+    "], name='class_cnn_3')\n",
     "\n",
     "cnn_3.compile(loss = LOSS,\n",
     "              optimizer = OPTIMIZER,\n",
@@ -1488,7 +1441,7 @@
     "x = tf.keras.layers.Dense(len(CLASS_NAMES), activation='softmax')(x)\n",
     "\n",
     "vgg_16 = tf.keras.models.Model(base_model_vgg.input, x) #merge the original VGG-16 layers, with our custom layers.\n",
-    "vgg_16._name = 'vgg_16'\n",
+    "vgg_16._name = 'class_vgg16'\n",
     "\n",
     "vgg_16.compile(loss = LOSS,\n",
     "               optimizer = OPTIMIZER,\n",
@@ -1612,7 +1565,7 @@
     "ef_net_b7 = Sequential([\n",
     "    feature_extractor_layer,\n",
     "    Dense(len(CLASS_NAMES), activation='softmax')\n",
-    "], name='ef_net_b7')\n",
+    "], name='class_efnetb7')\n",
     "\n",
     "ef_net_b7.compile(loss = LOSS,\n",
     "                  optimizer = OPTIMIZER,\n",
@@ -1724,7 +1677,7 @@
  "metadata": {
   "celltoolbar": "Raw Cell Format",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "leyenda",
    "language": "python",
    "name": "python3"
   },
